--- a/task1/IFE-task1.html
+++ b/task1/IFE-task1.html
@@ -1,1 +1,93 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>个人简历</title>
+    <style type="text/css">
+        .wrap{
+            width: 822px;
+            height: 820px;
+            border: black 1px solid;
+            margin: 0 auto;
+        }
+        .left{
+            float: left;
+            width: 210px;
+            height: 820px;
+            background-color: blue;
+        }
+        .right{
+            float: left;
+            width: 610px;
+            height: 820px;
+        }
+        .left .img .im{
+            padding: 50px ;
+        }
+        .left .bir,.nengli,.xingqu{
+            color: white;
+            padding: 0px 20px 0 20px;
+        }
+        .right .name,.qiu,.jiao,.job,.myself{
+            color: black;
+            padding: 0px 60px ;
+        }
+    </style>
+</head>
+<body>
+    <div class="wrap">
+        <div class="left">
+            <div class="img">
+                <img class="im" src="0.jpg"/>
+            </div>
+            <div class="bir">
+                <p>出生年月：2018/4/24</p>
+                <p>所在城市：南京</p>
+                <p>联系电话：156********</p>
+                <p>电子邮箱：**@**.com</p>
+            </div>
+            <div class="nengli">
+                <h2>技能特长</h2>
+                <p>div+css简单静态页面制作</p>
+                <p>PS简单修图</p>
+            </div>
+            <div class="xingqu">
+                <h2>兴趣爱好</h2>
+                <p>打羽毛球</p>
+                <p>看美剧</p>
+            </div>
+        </div>
+        <div class="right">
+            <div class="name">
+                <h1>杜子申</h1>
+            </div>
+            <div class="qiu">
+                <h2>求职意向</h2>
+                <p>意向岗位：前端开发人员</p>
+                <p>意向城市：南京</p>
+                <p>意向薪资：6000-8000</p>
+                <p>入职时间：2018/7/15</p>
+            </div>
+            <div class="jiao">
+                <h2>教育背景</h2>
+                <p>学历：大专学历</p>
+                <p>毕业院校：*市职业技术学院</p>
+                <p>所学专业：软件技术</p>
+            </div>
+            <div class="job">
+                <h2>工作经验</h2>
+                <p>2016/5/31-2017/6/22</p>
+                <p>公司名称：*市科技有限公司</p>
+                <p>职位名称：电商主管</p>
+            </div>
+            <div class="myself">
+                <h2>自我评价</h2>
+                <p>较为冲动，不喜与聊不来之人相处。</p>
+                <p>与朋友相处时，活泼 幽默。</p>
+                <p>自我学习约束能力不强。</p>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
