--- a/task1/IFE-task1.html
+++ b/task1/IFE-task1.html
@@ -27,11 +27,14 @@
         }
         .left .bir,.nengli,.xingqu{
             color: white;
-            padding: 0px 20px 0 20px;
+            padding: 0 20px 0 20px;
+        }
+        .left .nengli h2,.xingqu h2{
+            color: red;
         }
         .right .name,.qiu,.jiao,.job,.myself{
             color: black;
-            padding: 0px 60px ;
+            padding: 0 60px ;
         }
     </style>
 </head>
